Fix overflowing illustration

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -161,17 +161,25 @@
   }
 
   &__header {
-    margin: 0;
     color: #fff;
     padding: 37px;
     font-size: 3em;
     font-weight: bolder;
     line-height: 1;
+    max-width: 1200px;
+    margin: 0 auto;
   }
 
   &__illustration {
-    width: 120%;
-    margin-left: -10%;
-    margin-bottom: -$illustrationNegativeSpaceSize;
+    width: 1692px;
+    transform: translateY(40%) translateX(-50%);
+    position: relative;
+    left: 50%;
+
+    @media #{$mobile} {
+      transform: translateY(42.4%) translateX(-50%);
+      position: relative;
+      width: 900px;
+    }
   }
 }
